@@ -30,6 +30,7 @@ echo "* Checking basic perf_event functionality"
 ./validation/inherit_stat
 ./validation/enable_on_exec
 ./validation/simultaneous_group_overflow
+./validation/simultaneous_overflow
 
 echo
 echo "* Checking bugs that PAPI has to work around"
